# Ads_online

./: .dockerignore  README.md  dockerfile  entrypoint.sh  pyproject.toml
backend_compose/: .env  docker-compose.yaml  nginx.conf
frontend_react/src/images/: .greg-rakozy-oMpAz-DN-9I-unsplash.jpg.icloud  .malvestida-u79wy47kvVs-unsplash.jpg.icloud
skymarket/: dockerfile  entrypoint.sh
skymarket/ads/: filters.py  models.py  permissions.py  serializers.py  urls.py  views.py
skymarket/ads/migrations/: 0001_initial.py  0002_ad_image.py
skymarket/skymarket/: settings.py  urls.py
skymarket/users/: email.py  managers.py  models.py  serializers.py  urls.py
skymarket/users/migrations/: 0001_initial.py  0002_user_is_active.py
