[tool.poetry]
name = "ads-online"
version = "0.1.0"
description = ""
authors = ["alstacon <alstacon@gmail.com>"]
readme = "README.md"
packages = [{include = "ads_online"}]

[tool.poetry.dependencies]
python = "^3.10"
drf-spectacular = "^0.24.2"
django-cors-headers = "^3.13.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
